--- a/public/css/login.css
+++ b/public/css/login.css
@@ -32,6 +32,16 @@
   margin-bottom: 50px;
 }
 
+.forgot-pass a {
+  color: #007bff;
+  text-decoration: none;
+  font-weight: bold;
+}
+
+.forgot-pass a:hover {
+  text-decoration: underline;
+}
+
 footer {
   width: 100%;
   position: absolute;
