--- a/public/css/editProfile.css
+++ b/public/css/editProfile.css
@@ -39,8 +39,9 @@ main .logo.user-icon img {
 
 .container {
   width: 80%;
-  background-color: White;
-  border: 1px solid Black;
+  border-radius: 10px;
+  background-color: #f2f2f2;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
   justify-content: center;
