--- a/public/css/landpageAdmin.css
+++ b/public/css/landpageAdmin.css
@@ -26,8 +26,9 @@ main .logo.user-icon img {
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  background-color: White;
-  border: 1px solid Black;
+  border-radius: 10px;
+  background-color: #f2f2f2;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
   display: flex;
   flex-direction: column;
   justify-content: center;
