--- a/public/css/login.css
+++ b/public/css/login.css
@@ -15,9 +15,9 @@
   top: 50%;
   left: 50%;
   transform: translate(-50%, -50%);
-  border: 1px solid Black;
   border-radius: 10px;
-  background-color: White;
+  background-color: #f2f2f2;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
 }
 
 .form {
