--- a/public/css/users.css
+++ b/public/css/users.css
@@ -31,8 +31,57 @@ th {
   justify-content: space-between;
 }
 
-#delete, #add, #accept, #cancel{
+#delete,
+#add,
+#accept,
+#cancel {
   display: none;
+}
+
+.popup {
+  display: none;
+  position: fixed;
+  z-index: 1;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+.add-user-form {
+  background-color: #f1f1f1;
+  margin: 15% auto;
+  padding: 20px;
+  border-radius: 5px;
+  width: 80%;
+  max-width: 600px;
+  box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+}
+
+.popup-header {
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  margin-bottom: 20px;
+}
+
+.popup-header h2 {
+  margin: 0;
+}
+
+.close-button {
+  background: none;
+  border: none;
+  font-size: 20px;
+  cursor: pointer;
+  padding: 0;
+}
+
+.popup-body {
+  font-size: 16px;
+  line-height: 1.4;
 }
 
 footer {
@@ -58,4 +107,3 @@ footer {
   flex-direction: column;
   gap: 10px;
 }
-
