--- a/public/css/formularioTraslados.css
+++ b/public/css/formularioTraslados.css
@@ -64,24 +64,75 @@ input [type="button"] {
   margin-right: 5px;
 }
 
-/* Estilo del área del input[file] */
-.AdjuntarFoto {
-  background-color: #387e3794;
-  border: 10px;
-  color: #f4e7d5;
-  padding: 10px 20px 10px;
-  margin: 30px;
-  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
-  border-radius: 5px;
-  height: 75px;
-  width: 50px;
-  transition: background-color 0.3s ease;
-  margin-left: 80px;
-  margin-right: 20px;
+footer {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
 }
 
-/* Estilo del área del input[file] con :hover */
-.AdjuntarFoto:hover {
-  background-color: #db8a1b;
+footer {
+  width: 100%;
+  position: absolute;
+  bottom: 0;
+}
+
+.footer h2 {
+  align-items: center;
+  font-weight: bold;
+  text-align: center;
+}
+
+.copyright {
+  display: flex;
+  flex-direction: column;
+  gap: 10px;
+}
+
+/* Estilo del área del input[file] */
+.image-container input[type="file"] {
+  display: none;
+}
+
+.image-container {
+  display: flex;
+  justify-content: space-between;
+}
+
+.image-box {
+  background-color: #387e3794;
+  box-shadow: 2px 2px 5px rgba(0, 0, 0, 0.2);
+  width: 150px;
+  height: 150px;
+  border-radius: 10px;
+  margin: 20px;
+  position: relative;
+  overflow: hidden;
+}
+
+.image-box:hover {
   cursor: pointer;
+}
+
+.image-box img {
+  display: block;
+  width: 100%;
+  height: 100%;
+  object-fit: cover;
+}
+
+.image-box::before {
+  content: "Subir imagen";
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  color: White;
+  font-size: 1.5rem;
+  font-weight: bold;
+  opacity: 0.7;
+}
+
+.image-box:hover::before {
+  opacity: 1;
 }
