--- a/public/css/registroDeActivosUsuario.css
+++ b/public/css/registroDeActivosUsuario.css
@@ -1,16 +1,15 @@
 .solicitudRegActivos{
+  display: flex;
+  flex-direction: column;
   height: 100%;
   border-radius: 10px;
   background-color: #f1f1f1;
   padding: 4%;
   border-radius: 5px;
-  width: 75%;
+  width: 100%;
   max-width: 600px;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
-  margin: auto;
-}
-main{
-  padding: 5px;
+  margin:0 auto;
 }
 #txtDescripcion {
   display: block;
