--- a/public/css/registroDeActivosUsuario.css
+++ b/public/css/registroDeActivosUsuario.css
@@ -11,6 +11,18 @@
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
   margin:0 auto;
 }
+body {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  min-height: 87vh;
+}
+main {
+  flex-grow: 1;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 #txtDescripcion {
   display: block;
   width: 100%;
