--- a/public/css/estadoTraslado.css
+++ b/public/css/estadoTraslado.css
@@ -1,6 +1,10 @@
-.column {
-  float: left;
-  padding: 30px;
-  margin-left: 10px;
-  margin-right: 5px;
+.botonBuscar {
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
+label{
+  display: flex;
+  justify-content: center;
+  align-items: center;
 }
