Landpage del Equipo, enlace en todas las pags

--- a/public/css/general.css
+++ b/public/css/general.css
@@ -59,6 +59,10 @@ footer {
   text-transform: uppercase;
 }
 
+.copyright a{
+  text-decoration: none;
+  color: white;
+}
 .nav-links li:hover {
   transform: scale(1.1);
 }
