--- a/public/css/bitacora.css
+++ b/public/css/bitacora.css
@@ -34,23 +34,13 @@
 /* BEGIN MAIN EDIT */
 
 main {
-  margin-bottom: 2rem;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
 }
 
 main .logo.user-icon img {
   height: 150px;
-}
-
-.container {
-  width: 80%;
-  border-radius: 10px;
-  background-color: #f2f2f2;
-  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  align-items: center;
-  padding: 50px;
 }
 
 .container.edit-button {
@@ -91,4 +81,129 @@ footer {
   display: flex;
   flex-direction: column;
   gap: 10px;
+}
+table {
+  border-collapse: collapse;
+  margin: 20px 0;
+  background-color: #fff;
+  box-shadow: 0px 2px 6px rgba(0, 0, 0, 0.3);
+  width: 80%;
+}
+th,
+td {
+  border: 1px solid #ddd;
+  padding: 10px;
+  text-align: center;
+}
+
+th {
+  background-color: #eee;
+}
+
+#table-body tr:nth-child(even) {
+  background-color: #f2f2f2;
+}
+
+#table-body tr:hover {
+  background-color: #ddd;
+}
+.inputLabel {
+  width: 80%;
+  border-radius: 10px;
+  background-color: #f2f2f2;
+  box-shadow: 0px 0px 10px rgba(0, 0, 0, 0.2);
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding: 50px;
+}
+
+.inputLabel label {
+  display: inline-block;
+  width: 200px;
+  text-align: right;
+  margin-right: 10px;
+}
+
+.inputLabel input {
+  display: inline-block;
+}
+.proveBita {
+  display: flex;
+  justify-content: center;
+  font-weight: bold;
+  font-size: 25px;
+}
+
+.prove {
+  position: absolute;
+  left: 0;
+}
+
+.titulos {
+  display: flex;
+  justify-content: center;
+  font-size: 19px;
+}
+
+.titulos h3 {
+  margin-right: 10px;
+}
+
+.titulo {
+  text-align: center;
+}
+.column {
+  float: left;
+  padding: 10px;
+}
+.modal {
+  display: none;
+  position: absolute;
+  z-index: 1;
+  padding-top: 100px;
+  left: 0;
+  top: 0;
+  width: 100%;
+  height: 100%;
+  overflow: auto;
+  background-color: rgba(0, 0, 0, 0.4);
+}
+
+/* Modal content */
+.modalContent {
+  margin: auto;
+  padding: 20px;
+  width: 80%;
+  max-height: calc(100vh -200px);
+  overflow-y: auto;
+}
+
+.close {
+  color: #aaaaaa;
+  float: right;
+  font-size: 30px;
+  font-weight: bold;
+}
+
+.close:hover,
+.close:focus {
+  color: #000;
+  text-decoration: none;
+  cursor: pointer;
+}
+
+body form {
+  width: fit-content;
+  margin: auto;
+}
+
+div {
+  border-radius: 5px;
+}
+.page-buttons {
+  width: 80%;
+  display: flex;
+  justify-content: space-between;
 }
