--- a/public/css/estadoDeRegistro.css
+++ b/public/css/estadoDeRegistro.css
@@ -1,7 +1,11 @@
 .botonBuscar {
-  display: flex;
+  display: inline-block;
   justify-content: center;
   align-items: center;
+}
+.inputs{
+  display: inline-block;
+  margin-right: 10px;
 }
 label{
   display: flex;
