--- a/public/css/estadoTraslado.css
+++ b/public/css/estadoTraslado.css
@@ -1,5 +1,5 @@
 .botonBuscar {
-  display: flex;
+  display: inline-block;
   justify-content: center;
   align-items: center;
 }
@@ -7,4 +7,8 @@ label{
   display: flex;
   justify-content: center;
   align-items: center;
+}
+.inputs{
+  display: inline-block;
+  margin-right: 10px;
 }
