Sincronizacion con cloudinary

--- a/public/css/editProfile.css
+++ b/public/css/editProfile.css
@@ -1,3 +1,12 @@
+.avatar {
+  vertical-align: middle;
+  width: 180px;
+  height: 180px;
+  border-radius: 50%;
+  background-image: url("../img/user-icon-black.png");
+  background-size: cover;
+}
+
 .logo img {
   height: 70px;
   width: auto;
