--- a/public/css/formularioTraslados.css
+++ b/public/css/formularioTraslados.css
@@ -24,6 +24,8 @@ h3 {
   padding: auto;
   background-color: #f1f1f1;
   box-shadow: 0 0 20px rgba(0, 0, 0, 0.3);
+  width: 70%;
+
 }
 
 .buttons:hover {
